[package]
name = "site"
version = "3.0.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3.59", features = ["HtmlAudioElement"] }
getrandom = { version = "0.2.7", features = ["js"] }
gloo = "0.8.0"
rand = "0.8.5"
dioxus = "0.3.1"
dioxus-web = "0.3.0"
dioxus-router = { version = "0.3.0", features = ["web"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.152"
log = "0.4.17"
wasm-logger = "0.2.0"
dioxus-free-icons = { version = "0.6.0", features = ["bootstrap"] }

